# BinPacking_MPI

./: BinPacking.cpp  BinPacking.h  Branch.cpp  CMakeLists.txt  main.cpp
